--- a/index.html
+++ b/index.html
@@ -3,29 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prank: Endless Update</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Skopiuj e-mail</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        .container {
+            border: 1px solid white;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        #email {
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+        }
+        #copyButton {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        #copyButton:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <div id="browser-screen" class="screen">
-        <div id="browser-header">
-            <h1>Custom Browser</h1>
-        </div>
-        <div id="browser-content">
-            <p>Welcome to the custom browser. Loading content...</p>
-        </div>
-    </div>
-    <div id="updating-screen" class="screen">
-        <div id="update-header">
-            <h1>Updating Applications...</h1>
-        </div>
-        <div id="update-content">
-            <p id="update-status">Installing App 1...</p>
-            <div id="progress-bar">
-                <div id="progress"></div>
-            </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
+
+<div class="container">
+    <p id="email">qbaa134.pl@gmail.com</p>
+    <button id="copyButton" onclick="copyEmail()">Skopiuj</button>
+</div>
+
+<script>
+    function copyEmail() {
+        const email = document.getElementById("email").textContent;
+        const textArea = document.createElement("textarea");
+        textArea.value = email;
+        document.body.appendChild(textArea);
+        textArea.select();
+        document.execCommand("copy");
+        document.body.removeChild(textArea);
+        alert("E-mail skopiowany do schowka!");
+    }
+</script>
+
 </body>
 </html>
