--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             font-size: 1rem;
         }
         #copyButton:hover {
-            background-color: #45a049;
+            background-color: #FBC02D;
         }
     </style>
 </head>
