--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div class="container">
     <p id="email">qbaa134.pl@gmail.com</p>
-    <button id="copyButton" onclick="copyEmail()">Skopiuj</button>
+    <button id="copyButton" onclick="copyEmail()">Skopiuj 📋</button>
 </div>
 
 <script>
