--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         #copyButton {
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #FBC02D;
             color: white;
             border: none;
             border-radius: 5px;
